# compile-a

./: .gitignore  91_int_factor_sum.s  CMakeLists.txt  Makefile  README.md  cmake.sh  signed_div.cpp  test.sh
src/: Makefile  README.md  TODO.md  analyzer.cc  analyzer.hh  analyzer.y  arm_asm.h  asm_arm.cc  asm_arm.h  asm_translator.cc  asm_translator.h  ast.cc  ast.h  ast_to_ir.cc  debug.cc  debug.h  example.txt  flex.cc  flex.l  frame.cc  frame.h  ir.h  ir_addr.cc  ir_addr.h  ir_opt.h  ir_translator.cc  ir_translator.h  main.cc  output  run-clang-format.sh  symtab.cc  symtab.h
src/ast/: ast.cc  ast.h
src/context/: context.cc  context.h  functab.cc  functab.h  types.cc  types.h  vartab.cc  vartab.h  virtalloc.h
src/ir_opt/: basicblock.cc  basicblock.h  function.cc  function.h  label_redunctant_remove.cc  module.cc  module.h  remove_redunctant_label.cc
src/ir_to_asm/: frame_info.cc  frame_info.h  ir_armify.cc  reg_allocate_asm.cc  reg_assign.cc  reg_assign.h  translate_function.cc  translate_to_arm.cc  translate_to_asm.cc  translate_to_asm.h  translate_var.cc
src/reg_allocate/: color_graph.cc  color_graph.h  flow_graph.h  ir_armify.cc  ir_armify.h  liveness_analyze.cc  liveness_analyze.h  reg_allocate.cc  reg_allocate.h
test/: functional_test.cpp  performance_test.cpp  personal_test.cpp  test.cpp  test.hpp
test/functional_output/: 00_arr_defn2.ir  01_var_defn.ir  02_arr_defn4.ir  02_var_defn2.ir  03_arr_defn.ir  03_var_defn2.ir  04_const_defn.ir  04_func_defn.ir  05_add.ir  05_const_array_defn.ir  06_mod.ir  06_var_defn_func.ir  07_return_var.ir  08_arr_assign.ir  08_comment2.ir  09_if.ir  09_void_func.ir  10_if_else.ir  11_continue.ir  11_while.ir  12_array_traverse.ir  12_getint.ir  13_and.ir  13_array_traverse2.ir  14_or.ir  15_array_test3.ir  15_equal.ir  16_greater_eq.ir  16_nequal.ir  17_less.ir  17_less_eq.ir  18_cal_prio.ir  19_neg_expr.ir  20_arr_sum.ir  21_suminput.ir  22_if_test1.ir  27_while_test1.ir  28_while_test2.ir  29_while_test3.ir  32_while_if_test3.ir  (+33 more)
test/output/: 078_big_int_mul.air  078_big_int_mul.ir  078_big_int_mul.oir  078_big_int_mul.s  example.ir
test/performance_output/: 01_mm3.ir  02_mv3.ir
test/personal_output/: example.ir  (+1 more)
(+38 files in other folders)
